cmake_minimum_required(VERSION 3.7)
project(untitled)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp  No54_SprialMatrix.cpp No55_SprialMatrix2.cpp  No51_NQueens.cpp No53_MaxSubarray.cpp No55_JumpGame.cpp No45_JumpGame2.cpp No1_TwoSum.cpp No2_AddTwoInteger.cpp No3_LongestSubStrWithoutRepeatChar.cpp)
add_executable(untitled ${SOURCE_FILES})