cmake_minimum_required(VERSION 3.7)
project(untitled)

set(CMAKE_CXX_STANDARD 11)


set(SOURCE_FILES main.cpp  No54_SprialMatrix.cpp No55_SprialMatrix2.cpp  No51_NQueens.cpp No53_MaxSubarray.cpp No55_JumpGame.cpp No45_JumpGame2.cpp No1_TwoSum.cpp No2_AddTwoInteger.cpp No3_LongestSubStrWithoutRepeatChar.cpp No4_MedianOfTwoSortedArray.cpp No26_RemoveDuplicateNumberFromSortedArray.cpp dynamicProgramming/No32_LongestValidParentheses.cpp dynamicProgramming/Exer1_DistanceBetweenTwoStrings.cpp dynamicProgramming/Exer2_LongestCommonSubsequence.cpp dynamicProgramming/Exer3_LongestIncreasingSubsequence.cpp dynamicProgramming/No62_UniquePaths.cpp dynamicProgramming/No63_UniquePaths2.cpp dynamicProgramming/No64_MinimumPathNum.cpp dynamicProgramming/No85_Hard_MaximalRectangle.cpp No23_Hard_MergeKSortedLists.cpp No25_Hard_ReverseKGroupLists.cpp No76_Hard_MinimunWindowSubstring.cpp No37_Hard_SudokuSolver.cpp)
add_executable(untitled ${SOURCE_FILES})